--- a/c-legacy-releases/2023/05102023.md
+++ b/c-legacy-releases/2023/05102023.md
@@ -5,10 +5,10 @@ doc-type: release notes
 last-update: May 2023
 author: mfrei
 mini-toc-levels: 2
-source-git-commit: 768938cac02fcc31f707cf1763619eb60d35a1dc
-workflow-type: ht
-source-wordcount: '5457'
-ht-degree: 100%
+source-git-commit: 35e5429a141ab07dbaac97d168197ffcdadbea2b
+workflow-type: tm+mt
+source-wordcount: '5459'
+ht-degree: 99%
 
 ---
 
@@ -329,7 +329,7 @@ _版本重點_
 
 >[!IMPORTANT]
 >
->Adobe 建議您升級到適用於 Experience Manager 增強型連接器的[最新 1.9.9 版本](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/integrations/update-workfront-enhanced-connector.html) Workfront。
+>Adobe 建議您升級到適用於 Experience Manager 增強型連接器的[最新 1.9.9 版本](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets-view/integrations/workfront-connector-install.html?lang=en) Workfront。
 
 _已知問題_
 
