Updating Old File for core commit

--- a/c-legacy-releases/2023/04122023.md
+++ b/c-legacy-releases/2023/04122023.md
@@ -6,9 +6,9 @@ last-update: April 2023
 author: mfrei
 mini-toc-levels: 2
 source-git-commit: c08bbc9f5d6e25782426c3cc7ee9ccdc43157a1f
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '5606'
-ht-degree: 96%
+ht-degree: 100%
 
 ---
 
@@ -272,7 +272,7 @@ _新功能_
 
 _新功能_
 
-* 資產報告現在可讓管理員從 [!DNL Experience Manager Assets] as a [!DNL Cloud Service] 部署[產生資產下載報告](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/admin/asset-reports.html)。此資料可進一步讓管理員從關鍵成功量度取得深入見解，以衡量企業內和客戶對資產的採用程度。
+* Assets 報告現在可讓管理員從 [!DNL Experience Manager Assets] as a [!DNL Cloud Service] 部署[產生資產下載報告](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/admin/asset-reports.html)。此資料可進一步讓管理員從關鍵成功量度取得深入見解，以衡量企業內和客戶對 Assets 的採用程度。
 * [!DNL Experience Manager Assets]除了在連接到 Azure Blob 儲存體資料來源以使用大量匯入工具擷取資產時支援用於驗證的存取金鑰之外，現在還[支援 SAS 權杖](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/manage/add-assets.html#asset-bulk-ingestor)。
 * 改進 Asset Compute 中 CMYK 影像的管理，讓您可以為 CMYK 影像產生智慧型裁切和智慧型標記。
 
@@ -352,7 +352,7 @@ _版本重點_
 
 >[!IMPORTANT]
 >
->Adobe 建議您升級到適用於 Experience Manager 增強型連接器的[最新 1.9.8 版本](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/integrations/workfront-connector-install.html?lang=en) Workfront。
+>Adobe 建議您升級到適用於 Experience Manager 增強型連接器的[最新 1.9.8 版本](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/integrations/workfront-connector-install.html?lang=zh-Hant) Workfront。
 
 _已知問題_
 
