Updating Old File for core commit

--- a/c-legacy-releases/2023/05102023.md
+++ b/c-legacy-releases/2023/05102023.md
@@ -6,9 +6,9 @@ last-update: May 2023
 author: mfrei
 mini-toc-levels: 2
 source-git-commit: c08bbc9f5d6e25782426c3cc7ee9ccdc43157a1f
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '5459'
-ht-degree: 99%
+ht-degree: 100%
 
 ---
 
@@ -72,15 +72,15 @@ ht-degree: 99%
 
 +++即將到來的活動
 
-* **[!DNL Workfront]**|_連接：行銷和創意方面的管理員閒談_|**6 月 6 日下午 3:00 (美國山區時間)** |[登記](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,1qnTSsu1BE6bJ4ijFsYafg,COdPeWL3z0qsME9nhjnRwg,xDk-NFOQNUSCrwRemwbIYw,hTUwAaMesk-RUHhGMuTCKQ,xpzBbYDs1kKxAlpGmXT1JQ?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
+* **[!DNL Workfront]**|_連接：行銷和創意方面的管理員閒談_|**6 月 6 日下午 3:00 (美國山區時間)** |[報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,1qnTSsu1BE6bJ4ijFsYafg,COdPeWL3z0qsME9nhjnRwg,xDk-NFOQNUSCrwRemwbIYw,hTUwAaMesk-RUHhGMuTCKQ,xpzBbYDs1kKxAlpGmXT1JQ?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
 
-* **[!DNL Marketo Engage]**|_Marketo &amp; Mochas - 客戶歷程管理：生命週期模型_|**6 月 8 日下午 1:00 (美國東部時間)** |[登記](https://register.gotowebinar.com/register/8576570459027384151)
+* **[!DNL Marketo Engage]**|_Marketo &amp; Mochas - 客戶歷程管理：生命週期模型_|**6 月 8 日下午 1:00 (美國東部時間)** |[報名](https://register.gotowebinar.com/register/8576570459027384151)
 
-* **[!DNL Workfront]**|_諮詢專家：運用免費的 Adobe Workfront + Creative Cloud 整合服務_|**6 月 8 日上午 10:30 (美國山區時間)** |[登記](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,PiX3iDTmREqs2eOICcUIoA,5KJVGb6S_Uiiki7ErNALgw,ueSOCVtFIkmna7wZj0qUpA,vIUNhWnBmkOH38v4q3nQ8A,VszLUMl3W0268EAiz1tQ_w?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
+* **[!DNL Workfront]**|_諮詢專家：運用免費的 Adobe Workfront + Creative Cloud 整合服務_|**6 月 8 日上午 10:30 (美國山區時間)** |[報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,PiX3iDTmREqs2eOICcUIoA,5KJVGb6S_Uiiki7ErNALgw,ueSOCVtFIkmna7wZj0qUpA,vIUNhWnBmkOH38v4q3nQ8A,VszLUMl3W0268EAiz1tQ_w?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
 
-* **[!DNL Workfront]** | _連接：Workfront 策略性管理員閒談_ | **6 月 12 日 @ 8:00 AM (美國中部時間)** | [登記](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,mjTFCSLTbkuVKavNdopApA,dndSyq-qPkqd5A929WkXkw,In1kkaMFJ0Kkz4rHJ_FjWA,VULVBg2HWUWGxssI6bizyQ,zDPownyw9EGwqszZO1cshQ?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
+* **[!DNL Workfront]** | _連接：Workfront 策略性管理員閒談_ | **6 月 12 日 @ 8:00 AM (美國中部時間)** | [報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,mjTFCSLTbkuVKavNdopApA,dndSyq-qPkqd5A929WkXkw,In1kkaMFJ0Kkz4rHJ_FjWA,VULVBg2HWUWGxssI6bizyQ,zDPownyw9EGwqszZO1cshQ?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
 
-* **[!DNL Workfront]**|_諮詢專家：Workfront 服務時間內的資源管理_|**6 月 13 日下午 2:00 (美國山區時間)** |[登記](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,1qnTSsu1BE6bJ4ijFsYafg,COdPeWL3z0qsME9nhjnRwg,f3xda2S9qUiQFiyPwkN8bw,X4tGbEP2nEaLWQC3N4UNng,9hWdr3sEFEe7-p-YB9u-yg?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
+* **[!DNL Workfront]**|_諮詢專家：Workfront 服務時間內的資源管理_|**6 月 13 日下午 2:00 (美國山區時間)** |[報名](https://teams.microsoft.com/registration/Wht7-jR7h0OUrtLBeN7O4Q,1qnTSsu1BE6bJ4ijFsYafg,COdPeWL3z0qsME9nhjnRwg,f3xda2S9qUiQFiyPwkN8bw,X4tGbEP2nEaLWQC3N4UNng,9hWdr3sEFEe7-p-YB9u-yg?mode=read&amp;tenantId=fa7b1b5a-7b34-4387-94ae-d2c178decee1)
 
 [深入了解...](https://experienceleague.adobe.com/events/)
 
@@ -329,7 +329,7 @@ _版本重點_
 
 >[!IMPORTANT]
 >
->Adobe 建議您升級到適用於 Experience Manager 增強型連接器的[最新 1.9.9 版本](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/integrations/workfront-connector-install.html?lang=en) Workfront。
+>Adobe 建議您升級到適用於 Experience Manager 增強型連接器的[最新 1.9.9 版本](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/integrations/workfront-connector-install.html?lang=zh-Hant) Workfront。
 
 _已知問題_
 
