Updated by task 'MD_MANUAL_HANDOFF_1691571300945_TM-MT_1691571380267'

--- a/c-legacy-releases/2020/02202020.md
+++ b/c-legacy-releases/2020/02202020.md
@@ -8,7 +8,7 @@ exl-id: e98e1c59-7eda-4dd1-a3f0-7909af2e0e5e
 source-git-commit: 768938cac02fcc31f707cf1763619eb60d35a1dc
 workflow-type: tm+mt
 source-wordcount: '2618'
-ht-degree: 98%
+ht-degree: 99%
 
 ---
 
@@ -87,7 +87,7 @@ Adobe 正在更新網域和介面標題，以統一及提升您在所有 Experie
 
 **注意：**[!UICONTROL 「摘要」]頁面將於 2020 年 1 月汰除。請參閱產品中的淘汰通知。
 
-如需產品文件，請參閱 [Experience Cloud](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html?lang=zh-Hant)。
+如需產品文件，請參閱 [Experience Cloud](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html)。
 
 ## Experience Platform {#platform}
 
