--- a/c-legacy-releases/2020/03122020.md
+++ b/c-legacy-releases/2020/03122020.md
@@ -82,7 +82,7 @@ Adobe 正在更新網域和介面標題，以統一及提升您在所有 Experie
 
 **注意：**[!UICONTROL 「摘要」]頁面已於 2020 年 1 月淘汰。 請參閱產品中的淘汰通知。
 
-如需產品文件，請參閱 [Experience Cloud](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html?lang=zh-Hant) 說明。
+如需產品文件，請參閱 [Experience Cloud](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html) 說明。
 
 ## ![圖示](/assets/experience_platform_appicon_24.png) Experience Platform {#platform}
 
@@ -117,7 +117,7 @@ Adobe 正在更新網域和介面標題，以統一及提升您在所有 Experie
 
 **Android™ v4.18.1**
 
-* [!DNL Target] - [!DNL Target] 工作階段ID現在將作為內容資料引數「a.target.sessionId」新增到內部 [!UICONTROL Analytics-for-Target] 點選已傳送至Adobe Analytics。
+* [!DNL Target] - [!DNL Target] 工作階段ID現在會在內部新增為內容資料引數「a.target.sessionId」 [!UICONTROL Analytics-for-Target] 點選傳送至Adobe Analytics。
 
 ## ![圖示](/assets/analytics.png) [!DNL Analytics] {#analytics}
 
@@ -203,7 +203,7 @@ AEM 6.5 Service Pack 4.0 (6.5.4.0，已於 2020 年 3 月 5 日發行) 是項重
 * **AEM Assets Brand Portal**
 
   AEM Assets Brand Portal 6.4 Service Pack 6 (6.4.6，已於 2020 年 3 月 5 日發行) 變更了使用 [!UICONTROL Brand Portal 設定 AEM Assets 的方式。] 此外，此版本還包含其他增強功能和錯誤修正項目。
-   * [發行說明](https://experienceleague.adobe.com/docs/experience-manager-brand-portal/using/introduction/brand-portal-release-notes.html?lang=zh-Hant)
+   * [發行說明](https://experienceleague.adobe.com/docs/experience-manager-brand-portal/using/introduction/brand-portal-release-notes.html)
 
 ### 自助資源
 
