--- a/c-legacy-releases/2020/04162020.md
+++ b/c-legacy-releases/2020/04162020.md
@@ -51,7 +51,7 @@ ht-degree: 94%
 
 | 功能 | 說明 |
 | -----------| ---------- |
-| 依權限提供個人化訂閱 | <ul><li>根據使用者的 DX 權限預先選取訂閱建議。</li><li>建議訂閱項目會醒目顯示在產品清單頂端，以便快速掌握重點。</li><li>收到的電子郵件通知與使用者的產品權益相關。</li></ul> |
+| 依權限提供個人化訂閱 | <ul><li>根據使用者的 DX 權限預先選取訂閱建議。</li><li>建議訂閱項目會醒目顯示在產品清單頂端，以便快速掌握重點。</li><li>收到的電子郵件通知會與使用者的產品權益相關。</li></ul> |
 | 管理訂閱項目更輕鬆 | <ul><li>**[!UICONTROL 「管理訂閱」]**&#x200B;提供新的使用者體驗，可同時管理產品和事件訂閱。</li><li>使用者可利用新選項分別檢視與編輯產品和事件訂閱。</li><li>**[!UICONTROL 「刪除」]**&#x200B;選項可讓您取消訂閱產品或事件訂閱項目。</li><li>產品訂閱項目皆提供一鍵式&#x200B;**[!UICONTROL 「全部取消訂閱」]**&#x200B;選項。</li><li>網頁/行動裝置/平板電腦介面配備 UX 支援，且提供 19 種語言版本。</li></ul> |
 
 ## ![圖示](/assets/ec_appicon_24.png) Experience Cloud 介面 {#ecloud}
