--- a/c-legacy-releases/2020/09102020.md
+++ b/c-legacy-releases/2020/09102020.md
@@ -77,7 +77,7 @@ Adobe Experience Platform 現有功能更新：
 | 2020 年 8 月 17 日 | [對 Launch 實作除錯](https://experienceleague.adobe.com/docs/experience-manager-learn/sites/integrations/experience-platform-launch/debug-launch-implementation.html) | 影片 | 介紹 Launch 實作除錯所需的幾項工具和技巧。了解如何使用瀏覽器的開發人員主控台和 Experience Platform Debugger 擴充功能，識別及疑難排解 Launch 實作的重大問題。 |
 | 2020 年 8 月 17 日 | [建立 Launch Cloud Service 設定](https://experienceleague.adobe.com/docs/experience-manager-learn/sites/integrations/experience-platform-launch/create-launch-cloud-service.html) | 影片 | 了解如何建立新的 Launch Cloud Services 設定。Launch Cloud Service 設定隨後可套用至現有的 Site，在「作者」和「發佈」環境中都能看見系統載入 Launch 資料庫。 |
 | 2020 年 8 月 17 日 | [使用 Adobe I/O 連線 AEM 與 Launch](https://experienceleague.adobe.com/docs/experience-manager-learn/sites/integrations/experience-platform-launch/connect-aem-launch-adobe-io.html) | 影片 | 了解如何使用 Adobe I/O 建立 IMS 設定，以便使用 Launch API 驗證 AEM。整合完成後，AEM 將可透過 Launch API 通訊，存取 Launch 屬性。 |
-| 2020 年 8 月 17 日 | [Google Customer Match](https://experienceleague.adobe.com/docs/platform-learn/tutorials/rtcdp/integrate-with-google-customer-match.html) | 影片 | 此影片說明Adobe的Real-Time CDP和Google的Customer Match功能如何協助品牌在Google擁有和運營的屬性上與客戶互動，配合業務目標提升其宣傳成效。 |
+| 2020 年 8 月 17 日 | [Google 目標客戶比對](https://experienceleague.adobe.com/docs/platform-learn/tutorials/rtcdp/integrate-with-google-customer-match.html) | 影片 | 此影片說明Adobe的Real-Time CDP和Google的「客戶比對」功能如何協助品牌在Google擁有並營運的屬性上與客戶互動，配合業務目標提升其宣傳成效。 |
 | 2020 年 8 月 17 日 | [資料工程師專用 Adobe Experience Platform 快速入門課程簡介](https://video.tv.adobe.com/v/39478) | 影片 | [資料工程師專用 Adobe Experience Platform 快速入門](https://experienceleague.adobe.com/?recommended=ExperiencePlatform-D-1-2020.2)課程的簡介影片。 |
 | 2020 年 8 月 17 日 | [資料工程師專用 Adobe Experience Platform 快速入門](https://experienceleague.adobe.com/?recommended=ExperiencePlatform-D-1-2020.2) | 課程 | 了解如何在 Adobe Experience Platform 中完成資料工程師的主要職務。此入門課程利用影片和實作練習，協助您開始使用 Web SDK 擷取批次資料和串流資料，以及執行查詢等各項作業。 |
 | 2020 年 8 月 17 日 | [資料架構師專用 Adobe Experience Platform 快速入門課程簡介](https://video.tv.adobe.com/v/39477) | 影片 | 影片提供[資料架構師專用 Adobe Experience Platform 快速入門](https://experienceleague.adobe.com/?recommended=ExperiencePlatform-D-1-2020.1)課程概述。 |
@@ -141,7 +141,7 @@ Adobe Experience Platform 現有功能更新：
 
 ### Adobe Analytics 中的修正 {#aa-fixes}
 
-* 修正無法篩選的問題 [!UICONTROL Workspace] 欄的「未指定」維度。 (AN-222393)
+* 修正無法篩選的問題 [!UICONTROL 工作區] 欄的「未指定」維度。 (AN-222393)
 * 修正[!UICONTROL 排程專案]無法傳送的連線逾時問題。(AN-223916)
 * 修正[!UICONTROL 虛擬報表套裝]中，[!UICONTROL 「造訪」]區段無法正常運作的問題。(AN-225719)
 * 修正 Adobe Report Builder 中的 Chrome 瀏覽器版本問題。(AN-226718)
@@ -225,7 +225,7 @@ Audience Manager 的新功能、修正項目、說明文件和教學課程。
 | 2020 年 8 月 17 日 | [將 Audience Manager 區段對應至目的地](https://experienceleague.adobe.com/docs/audience-manager-learn/tutorials/build-and-manage-audiences/traits-and-segments/mapping-audience-manager-segments-to-destinations.html) | 影片 | 介紹 Audience Manager 中的各種目的地類型，並說明將區段對應至各個目的地類型的詳細資訊。 |
 | 2020 年 8 月 14 日 | [充分運用設定檔合併規則：秘訣、技巧和策略](https://experienceleague.adobe.com/docs/audience-manager-learn/tutorials/build-and-manage-audiences/profile-merge/customer-tips-getting-the-most-out-of-profile-merge-rules.html) | 文章 | 由 [!DNL Accordant] 多重解決方案顧問 Varun Kalra 傳授選擇及使用[!UICONTROL 設定檔合併規則]的秘訣。 |
 | 2020 年 8 月 14 日 | [特徵和區段最佳作法](https://experienceleague.adobe.com/docs/audience-manager-learn/tutorials/build-and-manage-audiences/traits-and-segments/customer-tips-traits-and-segments-best-practices.html) | 文章 | 由 [!DNL Ally Financial] 資深行銷專員 Matt Vittorioso 傳授管理特徵的秘訣。 |
-| 2020 年 8 月 12 日 | [了解及設定 Google Customer Match 以人物為基礎的目的地](https://experienceleague.adobe.com/docs/audience-manager-learn/tutorials/data-activation/people-based-destinations/understanding-and-configuring-the-google-customer-match-pbd.html) | 影片 | 影片會逐步帶您了解 Google Customer Match [!UICONTROL 以人物為基礎的目的地]的詳細資訊和使用案例，包括逐步說明如何建立區段及對應至目的地。此外，影片也會示範 Google Ad Console 中的受眾登陸作業。 |
+| 2020 年 8 月 12 日 | [了解及設定 Google 目標客戶比對以人物為基礎的目的地](https://experienceleague.adobe.com/docs/audience-manager-learn/tutorials/data-activation/people-based-destinations/understanding-and-configuring-the-google-customer-match-pbd.html) | 影片 | 影片會逐步帶您了解 Google 目標客戶比對[!UICONTROL 以人物為基礎的目的地]的詳細資訊和使用案例，包括逐步說明如何建立區段及對應至目的地。此外，影片也會示範 Google Ad Console 中的受眾登陸作業。 |
 | 2020 年 8 月 13 日 | [課程簡介 - 對象區段建立與策略](https://video.tv.adobe.com/v/39091) | 影片 | 此影片提供「對象區段建立與策略」課程的內容說明。 |
 | 2020 年 8 月 13 日 | [建立區段時使用程式碼檢視](https://experienceleague.adobe.com/docs/audience-manager-learn/tutorials/build-and-manage-audiences/traits-and-segments/using-code-view-when-building-segments.html) | 影片 | 了解如何使用程式碼檢視來定義區段，並且建立複雜的特徵組合，包括使用造訪間隔和頻率。 |
 | 2020 年 8 月 21 日 | [對象區段建立與策略](https://experienceleague.adobe.com/?recommended=AudienceManager-U-1-2020.2) | 課程 | 本課程會詳細介紹區段，告訴您如何建立及管理區段，以及如何對目的地合作夥伴啟用區段。您可以查看幾個實用的使用案例，甚至向客戶學習幾項秘訣和技巧。 |
@@ -351,9 +351,9 @@ AEM 6.4 Service Pack 8 Cumulative Fix Pack 2 (6.4.8.2，已於 2020 年 9 月 3 
 * [AEM Cloud Manager 版本注意事項](https://experienceleague.adobe.com/docs/experience-manager-cloud-manager/using/release-notes/release-notes-current.html)
 * [Automated Forms Conversion Service 版本注意事項](https://experienceleague.adobe.com/docs/aem-forms-automated-conversion-service/using/release-notes.html)
 * [AEM 6.5 Service Pack 版本注意事項](https://experienceleague.adobe.com/docs/experience-manager-65/release-notes/service-pack/sp-release-notes.html)
-* [AEM 6.4 Cumulative Fix Pack 版本注意事項](https://experienceleague.adobe.com/docs/experience-manager-64/release-notes/cfp-release-notes.html?lang=zh-Hant)
+* [AEM 6.4 Cumulative Fix Pack 版本注意事項](https://experienceleague.adobe.com/docs/experience-manager-64/release-notes/cfp-release-notes.html)
 * [AEM Assets Dynamic Media 版本注意事項](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/release-notes/s7rn2017.html)
-* [AEM Brand Portal 版本注意事項](https://experienceleague.adobe.com/docs/experience-manager-brand-portal/using/introduction/brand-portal-release-notes.html?lang=zh-Hant)
+* [AEM Brand Portal 版本注意事項](https://experienceleague.adobe.com/docs/experience-manager-brand-portal/using/introduction/brand-portal-release-notes.html)
 * [AEM 桌面應用程式版本注意事項](https://experienceleague.adobe.com/docs/experience-manager-desktop-app/using/release-notes.html)
 * [AEM Dispatcher 發行說明](https://experienceleague.adobe.com/docs/experience-manager-dispatcher/using/getting-started/release-notes.html)
 * [Adobe Primetime 發行說明](https://experienceleague.adobe.com/docs/primetime/release-notes/home.html)
